--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,33 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+alembic = "==1.16.1"
+blinker = "==1.9.0"
+click = "==8.2.1"
+colorama = "==0.4.6"
+dnspython = "==2.7.0"
+email-validator = "==1.1.2"
+flask = "==3.1.1"
+flask-migrate = "==4.1.0"
+flask-sqlalchemy = "==2.4.4"
+flask-validator = "==1.4.2"
+greenlet = "==3.2.2"
+idna = "==3.10"
+isbnlib = "==3.10.3"
+iso3166 = "==1.0.1"
+itsdangerous = "==2.2.0"
+jinja2 = "==3.1.6"
+mako = "==1.3.10"
+markupsafe = "==3.0.2"
+psycopg2-binary = "==2.9.10"
+py-moneyed = "==0.8.0"
+pycountry = "==24.6.1"
+python-dotenv = "==1.1.0"
+pytz = "==2020.1"
+schwifty = "==2020.9.0"
+sqlalchemy = "==2.0.41"
+typing-extensions = "==4.13.2"
+werkzeug = "==3.1.3"
 
 [dev-packages]
 
